<resources>
    <string name="app_name">Kalkulator Candah</string>
    <string name="action_settings">Settings</string>
    <string name="action_salin_ke_clipboard">Salin ke Clipboard</string>

    <string name="label_splash">https://github.com/ibrohimislam/kalkulator-candah</string>

    <string name="label_pemasukan">Pemasukan per bulan</string>
    <string name="label_badan">Badan</string>
    <string name="label_status_musi">Status Musi</string>
    <string name="label_perjanjian_pembangunan">Besar Perjanjian Pembangunan</string>

    <string name="label_aksi_hitung">Hitung</string>

    <string-array name="badan_arrays">
        <item>Khuddam</item>
        <item>LI</item>
        <item>Anshar</item>
    </string-array>

    <string-array name="musi_arrays">
        <item>Bukan anggota wasiyyat (Non Musi)</item>
        <item>Wasiyyat 1/10</item>
        <item>Wasiyyat 1/5</item>
        <item>Wasiyyat 1/3</item>
    </string-array>

    <string-array name="perjanjian_arrays">
        <item>Belum berjanji</item>
        <item>2%</item>
        <item>3%</item>
        <item>4%</item>
        <item>5%</item>
    </string-array>
</resources>
